server account backend finished initial test
